[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Components/MovementPhysics.gd" id="1_bh28h"]

[node name="MovementPhysics" type="Node3D"]
script = ExtResource("1_bh28h")
acceleration = 400.0
max_acceleration_force = 300.0

[node name="GroundRay" type="RayCast3D" parent="."]
transform = Transform3D(25, 0, 0, 0, 1, 0, 0, 0, 25, 0, -1, 0)

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
